--- a/overlay-lineage/packages/apps/Settings/res/values/strings.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/strings.xml
@@ -12,5 +12,5 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="bliss_maintainer">StudioKeys x Quinn</string>
+    <string name="bliss_maintainer">Stebomurkn420 x StudioKeys x Quinn</string>
 </resources>
